k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: e2e-lane-react-express
  namespace: colossus-e2e-lane-react-express
  labels:
    app: e2e-lane-react-express
    managed-by: colossus
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: e2e-lane-react-express
  template:
    metadata:
      labels:
        app: e2e-lane-react-express
    spec:
      hostAliases:
        - ip: "192.168.50.250"
          hostnames:
            - "ubuntu.desmana-truck.ts.net"
      containers:
        - name: app
          image: ubuntu:30500/e2e-lane-react-express:latest
          imagePullPolicy: Always
