k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: e2e-lane-react-express
  namespace: colossus-e2e-lane-react-express
  labels:
    app: e2e-lane-react-express
    managed-by: colossus
spec:
  type: ClusterIP
  selector:
    app: e2e-lane-react-express
  ports:
    - port: 80
      targetPort: 80
